--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 <div class="apps">
    <a href="POSVTA4/POSV4PASS.html"> POS V4 GENERAL </a>
   </div>
+<div class="apps">
+   <a href="POSVTA4/CORTEV4.html"> CORTE V4 POS </a>
+  </div>  
     <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
