--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
    <a href="POSVTA4/POSV4PASS.html"> POS V4 GENERAL </a>
   </div>
 <div class="apps">
-   <a href="POSVTA4/CORTEV4.html"> CORTE V4 POS </a>
+   <a href="POSVTA4/CORTEV4.html"> CORTE V4 POS 2 </a>
   </div>  
     <footer>
     Powered by <b>PROVSOFT</b>
