--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 <div class="apps">
    <a href="POSVTA4/CORTEV4.html"> CORTE V4 POS 2 </a>
   </div>  
+<div class="apps">
+   <a href="POSVTA4/MAPAV4.html"> MAPA V4 POS 2 </a>
+  </div>    
     <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
